test/e2e/testdata/httproute-mixed-backends.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-mixed-backends
  namespace: gateway-conformance-infra
spec:
  hostnames:
  - mixed.example.com
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mixed
    backendRefs:
    - kind: Service
      name: infra-backend-v1
      port: 8080
      weight: 1
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-mixed-fqdn
      weight: 1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-mixed-fqdn
  namespace: gateway-conformance-infra
spec:
  endpoints:
  - fqdn:
      hostname: infra-backend-v2.gateway-conformance-infra.svc.cluster.local
      port: 8080
  type: Endpoints
